# coleitra

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.rst
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  milestone_feature.md
.github/workflows/: coleitra_debian_binary.yml  coleitra_doc.yml
doc/: .gitattributes  .gitignore  about.w  abstract.w  boilerplate.w  cmake.w  coleitra.w  database.w  databaseedit.w  defines.w  docker.w  edit.w  edit_calls_grammarprovider.w  filelists.w  grammarprovider.w  grammarprovider.w~  grammarprovider_implementation_grammarconfiguration.w  grammarprovider_interface.w  grammarprovider_json.w  grammarprovider_language_specific.w  grammarprovider_networkqueries.w  grammarprovider_support_status.w  grammarprovider_wiktionary_word.w  gui.w  gui_about.w  gui_databaseedit.w  gui_edit.w  gui_main.w  gui_newtemplate.w  gui_settings.w  gui_simpleedit.w  gui_splash.w  gui_train.w  includes.w  infrastructure.w  levenshteindistance.w  main.w  networkscheduler.w  qt.w  settings.w  (+5 more)
src/: .gitattributes  .gitignore  CMakeLists.txt  compile.sh
src/android/res/drawable/: splash.xml
src/qt-android-cmake/: AndroidManifest.xml.in
src/scripts/vim/: .vimrc
src/scripts/vim/.vim/ftdetect/: nuweb.vim
src/scripts/vim/.vim/syntax/: nuweb.vim
src/unittests/cmake/: Mocxx.cmake
